* Change Fuse.Ajax.Request.Event names to those defined by the W3C XMLHttpRequest draft. [jddalton]
  Note: Backwards compatibility warning.

* Ensure onSuccess/onFailure responders are fired regardless of provided request options.onXXX status callbacks. [Prototype LH #334] [Darrin Holst, jddalton] 

* Skip global/request onSuccess/onFailure events if the request is aborted. [Diego Perini, fearphage, jddalton]

* Add missing semicolons, reduce multiple variable declarations, and remove wrongly placed commas. [Diego Perini]

* Add Fuse.Ajax.Request#abort method and ensure all XHR readyState events are fired once. [Prototype LH #124] [FuseJS LH #36, #38] [Diego Perini, fearphage, jddalton, Mark Caudill]

* Change to HTML 4.01 Transitional doctype and escape closing tags in the source in the off chance that it is embeded in a page instead of an external js file. [jddalton]

* Make Fuse.String#truncate work with zero and null lengths. [jddalton]

* Optimize Fuse.String#camelize and cleanup Fuse.String#capitalize. [fearphage, jddalton]

* Fix incorrect usage of Fuse.String#unfilterJSON in Fuse.Ajax.Request#evalResponse and optimize Fuse.String#unfilterJSON and Fuse.String#isJSON. [jddalton, Samuel Lebeau]

* Fix IE6 try-catch-finally bug in Fuse.Timer class and unit tests. [Prototype LH #696] [jddalton, xucia, Yaffle]

* Changed the argument order in Form.TimedObserver and Field.TimedObserver to `element, callback, interval, options` for a more consistent API. [jddalton]
  Note: Backwards compatibility warning.

* Make Fuse.Timer() operate on milliseconds instead of seconds and allow setting the millisecond `multiplier` via an options object as the third argument. [FuseJS LH #26] [kitsg, jddalton, Joe Gornick]
  Note: Backwards compatibility warning.

* unit test: Fix minor Safari 2.x bugs in functional event tests.
