@@ -3,16 +3,21 @@
   Fuse.addNS('Ajax.Base', {
     'constructor': (function() {
       function Base(options) {
-        this.options = Fuse.Object._extend(Fuse.Object
+        options = this.options = Fuse.Object._extend(Fuse.Object
           .clone(Fuse.Ajax.Base.options), options);
 
-        this.options.method = this.options.method.toLowerCase();
+        // Playing it safe here, even though we could not reproduce this bug,
+        // jQuery tickets #2570, #2865 report versions of Opera will display a
+        // login prompt when passing null like values for username/password when 
+        // no authorization is needed.
+        if (!options.username) options.username = options.password = '';
+        options.method = options.method.toLowerCase();
 
-        var params = this.options.parameters;
+        var params = options.parameters;
         if (Fuse.Object.isString(params))
-          this.options.parameters = Fuse.String(params).toQueryParams();
+          options.parameters = Fuse.String(params).toQueryParams();
         else if (params instanceof Fuse.Hash)
-          this.options.parameters = params.toObject();
+          options.parameters = params.toObject();
       }
       return Base;
     })()
